new data version, inc upcoming closures